@@ -1,4 +1,10 @@
 %Error-BLKANDNBLK: t/t_order_blkandnblk_bad.v:17:21: Unsupported: Blocked and non-blocking assignments to same variable: 't.array'
    17 |    logic [1:0][3:0] array;
       |                     ^~~~~
+                   t/t_order_blkandnblk_bad.v:19:16: ... Location of blocking assignment
+   19 |    always_comb array[0] = i;
+      |                ^~~~~
+                   t/t_order_blkandnblk_bad.v:22:6: ... Location of nonblocking assignment
+   22 |      array[1] <= array[0];
+      |      ^~~~~
 %Error: Exiting due to
