@@ -17,6 +17,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix DPI open array handling issues.
 
+****  Fix showing reference locations for BLKANDNBLK (#2170). [Yuri Victorovich]
+
 
 * Verilator 4.106 2020-12-02
 
